fix: lockup margin-bottom spacing and line-height

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_masthead.scss
@@ -5,6 +5,15 @@
 
   .su-lockup {
     z-index: $hb-z-index-lockup;
+
+    &__line1,
+    &__line2,
+    &__line3,
+    &__line4, {
+      margin-bottom:hb-calculate-rems(12px);
+      word-break: break-all;
+      line-height: 1em;
+    }
   }
 
   .su-site-search {
